<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LaunchScreen">

    <!-- Background decorative elements -->
    <View
        android:id="@+id/top_left_circle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/corner_circle"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="-40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom_right_circle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/corner_circle"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Centered MediCare Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- App Name -->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="@color/brand_primary"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <!-- Tagline -->
    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textSize="14sp"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/loading_dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <!-- Loading Dots Indicator -->
    <LinearLayout
        android:id="@+id/loading_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/loading_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagline">

        <View
            android:id="@+id/dot1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/loading_dot_active" />

        <View
            android:id="@+id/dot2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/loading_dot_inactive" />

        <View
            android:id="@+id/dot3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/loading_dot_inactive" />

    </LinearLayout>

    <!-- Loading Text -->
    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_text"
        android:textSize="14sp"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loading_dots" />

    <!-- Progress Bar -->
    <View
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/progress_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loading_text"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Animated Progress Fill -->
    <View
        android:id="@+id/progress_fill"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/brand_primary"
        app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
        app:layout_constraintStart_toStartOf="@+id/progress_bar"
        app:layout_constraintTop_toTopOf="@+id/progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
